Migrate to a better 'element' system